--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "chai": "^4.2.0",
     "http-server": "^0.12.1",
     "mocha": "^7.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
