--- a/.github/workflows/toc.yml
+++ b/.github/workflows/toc.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: technote-space/toc-generator@v3
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} 
-          TARGET_PATHS: README.md, ./1-object/README.md, ./1-scope/README.md, ./2-variable/README.md
+          TARGET_PATHS: README.md, ./1-object/README.md, ./1-scope/README.md, ./2-variable/README.md, ./3-function/README.md
           TOC_TITLE: '目次'
